<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/calculator_display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="end|bottom"
        android:padding="16dp"
        android:textSize="30sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="6">

        <Button android:id="@+id/button_clear" android:text="C" />
        <Button android:id="@+id/button_ln" android:text="ln" />
        <Button android:id="@+id/button_pi" android:text="pi" />
        <Button android:id="@+id/button_sin" android:text="sin" />
        <Button android:id="@+id/button_cos" android:text="cos" />

        <Button android:id="@+id/button_arcsin" android:text="arcsin" />
        <Button android:id="@+id/button_e" android:text="e" />
        <Button android:id="@+id/button_7" android:text="7" />
        <Button android:id="@+id/button_8" android:text="8" />
        <Button android:id="@+id/button_9" android:text="9" />
        
        <Button android:id="@+id/button_divide" android:text="/" />
        <Button android:id="@+id/button_sqrt" android:text="sqrt" />
        <Button android:id="@+id/button_4" android:text="4" />
        <Button android:id="@+id/button_5" android:text="5" />
        <Button android:id="@+id/button_6" android:text="6" />

        <Button android:id="@+id/button_multiply" android:text="*" />
        <Button android:id="@+id/button_exponent" android:text="^" />
        <Button android:id="@+id/button_1" android:text="1" />
        <Button android:id="@+id/button_2" android:text="2" />
        <Button android:id="@+id/button_3" android:text="3" />
        
        <Button android:id="@+id/button_subtract" android:text="-" />
        <Button android:id="@+id/button_backspace" android:text="del" />
        <Button android:id="@+id/button_dot" android:text="." />
        <Button android:id="@+id/button_0" android:text="0" />
        <Button android:id="@+id/button_equals" android:text="=" />

        <Button android:id="@+id/button_add" android:text="+" />
        <Button android:id="@+id/button_quad" android:text="quad" />
    </GridLayout>

</LinearLayout>